--- a/SGA/LOGIN/templates/crear_usuario.html
+++ b/SGA/LOGIN/templates/crear_usuario.html
@@ -165,7 +165,7 @@
 
 
 <fieldset class="module aligned ">
-    <form method="POST" action="{% url 'guardar_usuario' %}>{% csrf_token %}
+    <form method="POST" action="{% url 'guardar_usuario' %}>{% csrf_token %}">
         <div class="form-group">    
             <div>
                 <label for="id_usuario">Usuario:</label>
