Se termina el sistema de gestion de auditoria

--- a/SGA/LOGIN/templates/agenda_auditoria_jar.html
+++ b/SGA/LOGIN/templates/agenda_auditoria_jar.html
@@ -58,7 +58,7 @@
         <div id="branding">
 
             
-<div id="site-name"><a href="/admin/">Django administration</a></div>
+<div id="site-name"><a href="/admin/">SISTEMA DE GESTION DE AUDITORIA</a></div>
     <img src="/static/imagen/logosga.png" alt="Logo SGA" class="logo-small">
 
         </div>
